Added file management features Added UTI declaration for PDF files

--- a/BusiPDF/BusiPDF/BusiPDF-Info.plist
+++ b/BusiPDF/BusiPDF/BusiPDF-Info.plist
@@ -44,6 +44,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>LSItemContentTypes</key>
+	<array>
+		<string>com.adobe.pdf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
